use prettier for code

--- a/partners/partners.html
+++ b/partners/partners.html
@@ -1,197 +1,254 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia.">
-    <title>ZZ-Consulting Partnerzy </title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/resources/Icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/resources/Icons/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512"  href="/resources/Icons/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/resources/Icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/resources/Icons/favicon-16x16.png">
-    <link rel="manifest" href="/resources/Icons/site.webmanifest">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia."
+    />
+    <title>ZZ-Consulting Partnerzy</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/resources/Icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/resources/Icons/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="/resources/Icons/android-chrome-512x512.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/resources/Icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/resources/Icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/resources/Icons/site.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+  </head>
+  <body>
     <header>
-        <div class="contact-info">
-            <p><i class="fa-solid fa-phone"></i><a href="tel:+48 509 039 039">+48 509 039 039</a></p>
-            <p><i class="fa fa-envelope"></i> <a href="mailto:zzubezpieczenia@gmail.com">zzubezpieczenia@gmail.com</a></p>
-        </div>
-        <div class="header-container container">
+      <div class="contact-info">
+        <p>
+          <i class="fa-solid fa-phone"></i
+          ><a href="tel:+48 509 039 039">+48 509 039 039</a>
+        </p>
+        <p>
+          <i class="fa fa-envelope"></i>
+          <a href="mailto:zzubezpieczenia@gmail.com"
+            >zzubezpieczenia@gmail.com</a
+          >
+        </p>
+      </div>
+      <div class="header-container container">
         <div class="logo-container">
-            <div class="logo">
-                <a href="#"><img src="/resources/logo.webp" alt="ZZ-Consulting Logo"></a>
+          <div class="logo">
+            <a href="#"
+              ><img src="/resources/logo.webp" alt="ZZ-Consulting Logo"
+            /></a>
+          </div>
+
+          <div class="mobile-menu">
+            <ul class="menu">
+              <li><a class="menuItem" href="/">Strona Główna</a></li>
+              <li><a class="menuItem" href="/about">O Nas</a></li>
+              <li><a class="menuItem" href="/forms">Druki</a></li>
+              <li><a class="menuItem" href="/partnerzy">Partnerzy</a></li>
+              <li><a class="menuItem" href="#">Narzędzia</a></li>
+              <li><a class="menuItem" href="/contact">Kontakt</a></li>
+            </ul>
+            <div class="hamburger">
+              <i class="fa-solid fa-bars menuIcon"> </i>
+              <i class="fa-solid fa-x closeIcon"></i>
             </div>
-       
-            <div class="mobile-menu">
-                <ul class="menu">
-                    <li><a class="menuItem" href="/">Strona Główna</a></li>
-                    <li><a class="menuItem" href="/about">O Nas</a></li>
-                    <li><a class="menuItem" href="/forms">Druki</a></li>
-                    <li><a class="menuItem" href="/partnerzy">Partnerzy</a></li>
-                    <li><a class="menuItem" href="#">Narzędzia</a></li>
-                    <li><a class="menuItem" href="/contact">Kontakt</a></li>
-                </ul>
-                <div class="hamburger">
-                    <i class="fa-solid fa-bars menuIcon"> </i>
-                    <i class="fa-solid fa-x closeIcon"></i>
-                </div>
-            </div>
+          </div>
         </div>
-    </div>
+      </div>
     </header>
     <nav>
-        <ul class="nav-links container">
-            <li><a href="/">Strona Główna</a></li>
-            <li><a href="/about">O Nas</a></li>
-            <li><a href="/forms">Druki</a></li>
-            <li><a href="/partnerzy" class="nav-active">Partnerzy</a></li>
-            <li><a href="/gugu">Narzędzia</a></li>
-            <li><a href="/contact">Kontakt</a></li>
-        </ul>
+      <ul class="nav-links container">
+        <li><a href="/">Strona Główna</a></li>
+        <li><a href="/about">O Nas</a></li>
+        <li><a href="/forms">Druki</a></li>
+        <li><a href="/partnerzy" class="nav-active">Partnerzy</a></li>
+        <li><a href="/gugu">Narzędzia</a></li>
+        <li><a href="/contact">Kontakt</a></li>
+      </ul>
     </nav>
 
+    <section id="partners-home">
+      <h1>Partnerzy</h1>
 
-<section id="partners-home">
-
-    <h1>Partnerzy</h1>
-
-    <div class="home-container">
+      <div class="home-container">
         <div class="home-box container">
-            <a class="partners-box" href="/partnerzy/allianz">
-
-                <div class="home-logo">
-                    <img src="/resources/partners/ALLIANZ_logo.png" alt="allianz-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej!</span>
-                </div>
-            </a>
-            <a class="partners-box" href="/partnerzy/ergo-hestia">
-                <div class="home-logo">
-                    <img src="/resources/partners/ERGO_logo.webp" alt="ERGO-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej</span>
-                </div>
-
-            </a>
-            <a class="partners-box" href="/partnerzy/generali">
-                <div class="home-logo">
-                    <img src="/resources/partners/GENERALI_logo.webp" alt="GENERALI-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej</span>
-                </div>
-
-            </a>
-            <a class="partners-box"  href="/partnerzy/hdi">
-                <div class="home-logo">
-                    <img src="/resources/partners/HDI_logo.webp" alt="HDI-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej!</span>
-                </div>
-            </a>
-            <a class="partners-box" href="/partnerzy/interrisk">
-
-                <div class="home-logo">
-                    <img src="/resources/partners/INTERRISK_logo.webp" alt="interrisk-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej!</span>
-                </div>
-
-            </a>
-            <a class="partners-box" href="/partnerzy/link4">
-                <div class="home-logo">
-                    <img src="/resources/partners/LINK4_logo.webp" alt="link4-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej!</span>
-                </div>
-            </a>
-            <a class="partners-box" href="/partnerzy/mtu">
-                <div class="home-logo">
-                    <img src="/resources/partners/MTU_logo.webp" alt="mtu-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej!</span>
-                </div>
-            </a>
-            <a class="partners-box" href="/partnerzy/proama">
-                <div class="home-logo">
-                    <img src="/resources/partners/PROAMA_logo.webp" alt="proama-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej!</span>
-                </div>
-            </a>
-            <a class="partners-box" href="/partnerzy/pzu">
-                <div class="home-logo">
-                    <img src="/resources/partners/PZU_logo.webp" alt="pzu-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej!</span>
-                </div>
-            </a>
-            <a class="partners-box" href="/partnerzy/uniqa">
-                <div class="home-logo">
-                    <img src="/resources/partners/UNIQA_logo.webp" alt="uniqa-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej!</span>
-                </div>
-            </a>
-            <a class="partners-box" href="/partnerzy/warta">
-                <div class="home-logo">
-                    <img src="/resources/partners/WARTA_logo.webp" alt="warta-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej!</span>
-                </div>
-            </a>
-            <a class="partners-box" href="/partnerzy/wiener">
-                <div class="home-logo">
-                    <img src="/resources/partners/WIENER_logo.webp" alt="wiener-logo">
-                </div>
-                <div class="home-button">
-                    <span>Zobacz więcej!</span>
-                </div>
-            </a>
+          <a class="partners-box" href="/partnerzy/allianz">
+            <div class="home-logo">
+              <img
+                src="/resources/partners/ALLIANZ_logo.png"
+                alt="allianz-logo"
+              />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej!</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/ergo-hestia">
+            <div class="home-logo">
+              <img src="/resources/partners/ERGO_logo.webp" alt="ERGO-logo" />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/generali">
+            <div class="home-logo">
+              <img
+                src="/resources/partners/GENERALI_logo.webp"
+                alt="GENERALI-logo"
+              />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/hdi">
+            <div class="home-logo">
+              <img src="/resources/partners/HDI_logo.webp" alt="HDI-logo" />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej!</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/interrisk">
+            <div class="home-logo">
+              <img
+                src="/resources/partners/INTERRISK_logo.webp"
+                alt="interrisk-logo"
+              />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej!</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/link4">
+            <div class="home-logo">
+              <img src="/resources/partners/LINK4_logo.webp" alt="link4-logo" />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej!</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/mtu">
+            <div class="home-logo">
+              <img src="/resources/partners/MTU_logo.webp" alt="mtu-logo" />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej!</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/proama">
+            <div class="home-logo">
+              <img
+                src="/resources/partners/PROAMA_logo.webp"
+                alt="proama-logo"
+              />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej!</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/pzu">
+            <div class="home-logo">
+              <img src="/resources/partners/PZU_logo.webp" alt="pzu-logo" />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej!</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/uniqa">
+            <div class="home-logo">
+              <img src="/resources/partners/UNIQA_logo.webp" alt="uniqa-logo" />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej!</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/warta">
+            <div class="home-logo">
+              <img src="/resources/partners/WARTA_logo.webp" alt="warta-logo" />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej!</span>
+            </div>
+          </a>
+          <a class="partners-box" href="/partnerzy/wiener">
+            <div class="home-logo">
+              <img
+                src="/resources/partners/WIENER_logo.webp"
+                alt="wiener-logo"
+              />
+            </div>
+            <div class="home-button">
+              <span>Zobacz więcej!</span>
+            </div>
+          </a>
         </div>
-    </div>
-</section>
-<footer class="footer">
-    <div class="footer-right">
-        <img src="/resources/logo.webp" alt="logo">
-    </div>
-    <div class="footer-center-left">
-        <p>Ubezpieczenia ZZ-Consulting </p>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer-right">
+        <img src="/resources/logo.webp" alt="logo" />
+      </div>
+      <div class="footer-center-left">
+        <p>Ubezpieczenia ZZ-Consulting</p>
         <p>41-506 Chorzów</p>
         <p>ul.Podmiejska 34/U1</p>
-    </div>
-    <div class="footer-center-right">
-     <p>Godziny otwarcia:</p>
-     <p>Pn: 9:00 - 19:00</p>
-     <p>Wt-Pt: 9:00 - 17:00</p>
-    </div>
-    <div class="footer-left">
+      </div>
+      <div class="footer-center-right">
+        <p>Godziny otwarcia:</p>
+        <p>Pn: 9:00 - 19:00</p>
+        <p>Wt-Pt: 9:00 - 17:00</p>
+      </div>
+      <div class="footer-left">
         <span>&copy; 2023</span>
-        <span> <a href="#">ZZ-Consulting</a>. <br>Wszystkie prawa zastrzeżone.</span>
-        <p>Created by <a href="#"><img src="/resources/AODesign.webp" alt="AODesign logotype"></a></p>
-    </div>
-</footer>
-<i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
+        <span>
+          <a href="#">ZZ-Consulting</a>. <br />Wszystkie prawa
+          zastrzeżone.</span
+        >
+        <p>
+          Created by
+          <a href="#"
+            ><img src="/resources/AODesign.webp" alt="AODesign logotype"
+          /></a>
+        </p>
+      </div>
+    </footer>
+    <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
 
-<script src="/script.js"></script>
-</body>
-
+    <script src="/script.js"></script>
+  </body>
 </html>
