--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <li><a class="menuItem" href="/about">O Nas</a></li>
               <li><a class="menuItem" href="/forms">Druki</a></li>
               <li><a class="menuItem" href="/partnerzy">Partnerzy</a></li>
-              <li><a class="menuItem" href="#">Narzędzia</a></li>
+              <li><a class="menuItem" href="/tools">Narzędzia</a></li>
               <li><a class="menuItem" href="/contact">Kontakt</a></li>
             </ul>
             <div class="hamburger">
@@ -100,7 +100,7 @@
         <li><a href="/about">O Nas</a></li>
         <li><a href="/forms">Druki</a></li>
         <li><a href="/partnerzy">Partnerzy</a></li>
-        <li><a href="/gugu">Narzędzia</a></li>
+        <li><a href="/tools">Narzędzia</a></li>
         <li><a href="/contact">Kontakt</a></li>
       </ul>
     </nav>
@@ -226,6 +226,22 @@
           </div>
         </div>
       </div>
+    </section>
+    <section id="calculator-online">
+      <div class="container center">
+        <div class="car-insurance">
+            <div class="car-left-site">
+                <h1>Kalkulator On-line</h1>
+                <p>Nie wiesz, jaką wybrać polisę? 🤔 Sprawdź za darmo oferty ubezpieczeń 🚗 i wybierz najkorzystniejszą propozycję dla Ciebie i Twojego auta 👉
+                    Zawierając polisę ubezpieczeniową w sposób zdalny zapewniamy pomoc w przypadku zmiany danych lub też potrzeby zgłoszenia szkody.</p>
+                    <a href="https://www.compero.pl/kalkulator_polis/p/MjAyMTg1LWM2YmE=">
+                    <button class="button">Przejdź do kalkulatora!</button>
+                    </a>
+            </div>
+            <div class="car-right-site">
+                <img src="https://scontent.fktw4-1.fna.fbcdn.net/v/t39.30808-6/380593665_805521414913511_7053597363580076665_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=YFXd5Px8JZIAX8A2c4a&_nc_ht=scontent.fktw4-1.fna&oh=00_AfBBo18ONvSAy-W0zLbzmJvYwnv8urX4iHniRQCISvhADg&oe=65571B70" alt="calcualtor-photo">
+            </div>
+        </div>
     </section>
 
     <section id="partners">
