--- a/index.html
+++ b/index.html
@@ -104,13 +104,30 @@
         <li><a href="/contact">Kontakt</a></li>
       </ul>
     </nav>
-    <div id="company-description" class="company-description-container">
-      <h1>ubezpieczenia ZZ Consulting</h1>
-      <h2>Wszystkie ubezpieczenia w jednym miejscu</h2>
-    </div>
+    <section id="choose-us">
+      <div id="company-description" class="company-description-container">
+        <h1>ubezpieczenia ZZ Consulting</h1>
+        <p>Wszystkie ubezpieczenia w jednym miejscu</p>
+      </div>
+
+      <div class="choose-description container">
+        <div class="left-site">
+          <img src="/resources/choose-us.jpg" alt="Choose-us" width="400px">
+        </div>
+        <div class="right-site">
+          <h2>Najlepsze ubezpieczenia w Chorzowie</h3>
+          <p>Wybrani jako Orły ubezpieczeń w plebiscycie branżowym 2022. </p>
+          <h2>U nas zapłacisz gotówką, kartą, BLIK i przelewem!</h3>
+            <p>Przyjmujemy płatność gotówką, kartą, przelewem oraz BLIKiem. Dodatkowo za ubezpieczenie możesz zapłacić przelewem.
+            </p>
+            <h2>Przypomnimy o Twoim ubezpieczeniu!</h3>
+              <p>Zadzwonimy do Ciebie przed końcem trwania umowy i przypomnimy o Twoim ubezpieczeniu oraz zaprezentujemy nową ofertę.</p>
+        </div>
+      </div>
+   </section>
     <section id="offer">
       <h3 class="offer-header">Oferta</h3>
-      <div class="offer-container">
+      <div class="offer-container reveal fade-bottom">
         <div class="splide">
           <div class="splide__track">
             <ul class="splide__list">
